--- a/src/app/client-info/client-info.component.html
+++ b/src/app/client-info/client-info.component.html
@@ -10,7 +10,7 @@
         <th tuiTh>Passport</th>
         <th tuiTh>Passport Date</th>
         <th tuiTh>Citizenship</th>
-        <th tuiTh></th>
+        <th class="menu-col" tuiTh></th>
       </tr>
     </thead>
     <tbody tuiTbody *tuiLet="data as clients" [data]="clients">
