--- a/src/app/room-info/room-info.component.html
+++ b/src/app/room-info/room-info.component.html
@@ -7,7 +7,7 @@
         <th tuiTh>№</th>
         <th tuiTh>Room number</th>
         <th tuiTh>Owner</th>
-        <th tuiTh></th>
+        <th tuiTh class="menu-col"></th>
       </tr>
     </thead>
     <tbody tuiTbody *tuiLet="data as rooms" [data]="rooms">
