--- a/src/app/service-info/service-info.component.html
+++ b/src/app/service-info/service-info.component.html
@@ -7,7 +7,7 @@
         <th tuiTh>№</th>
         <th tuiTh>Service name</th>
         <th tuiTh>Service price</th>
-        <th tuiTh></th>
+        <th tuiTh class="menu-col"></th>
       </tr>
     </thead>
     <tbody tuiTbody *tuiLet="data as services" [data]="services">
