--- a/src/app/service-info/service-info.component.html
+++ b/src/app/service-info/service-info.component.html
@@ -19,7 +19,7 @@
           {{ service.name }}
         </td>
         <td *tuiCell="'price'" tuiTd>
-          {{ service.price }}
+          {{ service.price | tuiFormatNumber:{decimalLimit: 2} }} ₾
         </td>
         <td *tuiCell="'actions'" tuiTd>
           <tui-hosted-dropdown #dropdown [content]="content">
