--- a/src/styles.less
+++ b/src/styles.less
@@ -6,7 +6,7 @@
 :root {
   --tui-primary: #47CB84;
   --tui-secondary: var(--font-color);
-  --tui-secondary-hover: var(--mid-gray);
+  --tui-secondary-hover: var(--light-gray);
   --tui-primary-hover: #42b978;
   --tui-font-text: Montserrat-Medium, monospace;
   --tui-font-heading: Montserrat-Medium, monospace;
