--- a/src/app/booking/order-info/order-info.component.html
+++ b/src/app/booking/order-info/order-info.component.html
@@ -2,7 +2,7 @@
 <ng-container *tuiLet="booking$ | async as booking">
   <div class="main" *ngIf="booking">
     <h3>
-      {{ booking.client.name }} {{ booking.client.surname }}
+      {{ booking.client.fullName }}
     </h3>
     <h4>
       {{ booking.room.roomNumber }}
@@ -69,7 +69,7 @@
         </tr>
       </tbody>
     </table>
-    <h3 class="total">total: {{ total | tuiFormatNumber:{decimalLimit: 2} }} ₾</h3>
+    <h3 class="total">total: {{ booking.total | tuiFormatNumber:{decimalLimit: 2} }} ₾</h3>
   </div>
 
   <div class="footer" *ngIf="mode === 'active'">
