change app logo and begin of printing invoice

--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -3,7 +3,7 @@
   <app-header [title]="mode + ' Room'"></app-header>
 
   <div class="main">
-    <table tuiTable [columns]="columns">
+    <table class="data-table" tuiTable [columns]="columns">
       <thead>
       <tr tuiThGroup>
         <th tuiTh>№</th>
