--- a/src/app/company-info/company-info.component.html
+++ b/src/app/company-info/company-info.component.html
@@ -1,9 +1,9 @@
 <app-header [title]="'Company information'"></app-header>
 
-<div class="main">
-
-<!--  <pre class="tui-space_bottom-3">{{ company$ | async | json }}</pre>-->
-<!--  {{ isEditModeOn ? 'Disable edit' : 'Enable edit' }}-->
+<div class="main" *tuiLet="company$ | async as company">
+<ng-container *ngIf="company">
+  <!--  <pre class="tui-space_bottom-3">{{ company$ | async | json }}</pre>-->
+  <!--  {{ isEditModeOn ? 'Disable edit' : 'Enable edit' }}-->
   <tui-toggle
     [(ngModel)]="isEditModeOn"
     size="l"
@@ -39,6 +39,7 @@
     ></tui-error>
 
     <tui-input-phone
+      class="tui-space_vertical-3"
       formControlName="phone"
       [countryCode]="'+995'"
       [phoneMaskAfterCountryCode]="'###-##-##-##'"
@@ -65,36 +66,23 @@
       formControlName="email"
       [error]="[] | tuiFieldError | async"
     ></tui-error>
-<!--    <tui-input-files-->
-<!--      *ngIf="!control.value"-->
-<!--      accept="image/*"-->
-<!--      formControlName="logo"-->
-<!--      (reject)="onReject($event)"-->
-<!--    ></tui-input-files>-->
 
-<!--    <tui-files class="tui-space_top-1">-->
-<!--      <tui-file-->
-<!--        *ngIf="loadedFiles$ | async as file"-->
-<!--        [file]="file"-->
-<!--        (removed)="removeFile()"-->
-<!--      ></tui-file>-->
+    <tui-input-files
+      *ngIf="!this.group.get('logo')?.value"
+      accept="image/png"
+      formControlName="logo"
+    ></tui-input-files>
 
-<!--      <tui-file-->
-<!--        *ngIf="rejectedFiles$ | async as file"-->
-<!--        state="error"-->
-<!--        [file]="file"-->
-<!--        (removed)="clearRejected()"-->
-<!--      ></tui-file>-->
+    <tui-files class="tui-space_top-1">
+      <tui-file
+        *ngIf="loadedFiles$ | async as file"
+        [file]="file"
+        (removed)="removeFile()"
+      ></tui-file>
+    </tui-files>
 
-<!--      <tui-file-->
-<!--        *ngIf="loadingFiles$ | async as file"-->
-<!--        state="loading"-->
-<!--        [file]="file"-->
-<!--      ></tui-file>-->
-<!--    </tui-files>-->
   </form>
 
-  <button tuiButton appearance="primary" class="tui-space_right-3" (click)="save()" [disabled]="disabled">Save</button>
+  <button tuiButton appearance="primary" class="tui-space_right-3" (click)="save(company)" [disabled]="disabled">Save</button>
+</ng-container>
 </div>
-
-<!--change logotip todo-->
