--- a/src/app/shared/components/main-layout/main-layout.component.scss
+++ b/src/app/shared/components/main-layout/main-layout.component.scss
@@ -5,7 +5,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  max-width: 120px;
 }
 
 tui-svg {
@@ -14,6 +14,7 @@ tui-svg {
   margin: 0 20px 0 10px;
 }
 
+// todo настроить расположение
 .sidebar {
   position: fixed;
   width: 18%;
