--- a/src/app/booking/invoice/invoice.component.scss
+++ b/src/app/booking/invoice/invoice.component.scss
@@ -1,38 +1,127 @@
-@media print {
-  body * {
-    visibility: hidden;
-  }
-  #invoice, #invoice * {
-    visibility: visible;
-  }
-  #invoice {
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-  footer {
+tui-svg {
+  cursor: pointer;
+}
 
-  }
+.document {
+  margin-left: 30%;
+  padding: 0 2em;
+  width: 21cm;
+  background: white;
+  box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
+}
+
+.page-header, .page-header-space {
+  height: 130px;
+}
+
+.page-footer, .page-footer-space {
+  height: 100px;
+}
+
+.page-footer {
+  visibility: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  border-top: 1px solid #333333;
+}
+
+.page-header {
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-bottom: 1px solid #333333;
 }
 
 .page {
+  page-break-after: always;
   background: white;
-  //display: block;
-  min-height: 100vh;
-  margin: 0 auto 0.5cm;
-  //padding: 1.5cm 1.5cm 1.5cm 1.5cm;
-  //box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
-  display: flex;
-  flex-direction: column;
+  //min-height: 100vh;
+  //margin: 0 auto 0.5cm;
+  //display: flex;
+  //flex-direction: column;
 }
 
-.page[size="A4"] {
-  width: 21cm;
-  //height: 29.7cm;
+@page {
+  margin: 20mm
 }
+
+@media print {
+  tui-svg {
+    display: none;
+  }
+
+  app-header {
+    display: none;
+  }
+
+  .no-print {
+    display: none;
+  }
+
+  thead {
+    display: table-header-group;
+  }
+  tfoot {
+    display: table-footer-group;
+  }
+
+  button {
+    display: none;
+  }
+
+  .page-header, .page-footer {
+    visibility: visible;
+  }
+
+  .document {
+    width: 100%;
+    background: none;
+    margin: 0;
+    padding: 0;
+    box-shadow: none;
+  }
+}
+
+
+//@media print {
+//  body * {
+//    visibility: hidden;
+//  }
+//  #invoice, #invoice * {
+//    visibility: visible;
+//  }
+//  #invoice {
+//    position: absolute;
+//    left: 0;
+//    top: 0;
+//  }
+//  footer {
+//
+//  }
+//}
+//
+//.page {
+//  background: white;
+//  //display: block;
+//  min-height: 100vh;
+//  margin: 0 auto 0.5cm;
+//  //padding: 1.5cm 1.5cm 1.5cm 1.5cm;
+//  //box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
+//  display: flex;
+//  flex-direction: column;
+//}
+//
+//.page[size="A4"] {
+//  width: 21cm;
+//  //height: 29.7cm;
+//}
 
 .flex-box {
   display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
 }
 
 .flex-child {
@@ -42,18 +131,6 @@
 
 .flex-child:first-child {
   text-align: left;
-}
-
-header {
-  min-height: 50px;
-}
-
-footer {
-  min-height: 50px;
-}
-
-article {
-  flex: 1;
 }
 
 table {
@@ -76,16 +153,25 @@ table {
   table, th, td {
     text-align: center;
     vertical-align: bottom;
-    border-bottom: 2px solid #333333;
   }
 
   tr {
     height: 3em;
+    border-bottom: 2px solid #333333;
+
+    &.total-row {
+      border: none;
+    }
   }
 
   th:first-child,
   td:first-child {
-    text-align: left;
+    &.total-cell {
+      text-align: right;
+    }
+    &:not(.total-cell) {
+      text-align: left;
+    }
   }
 
   th:last-child,
@@ -98,11 +184,6 @@ table {
   font-size: 1.5em;
   margin: 0.67em 0;
   font-weight: bold;
-}
-
-hr {
-  border-top: 1px solid #333333;
-  margin: 2.5em 0;
 }
 
 img {
