added room number in invoice

--- a/src/app/booking/invoice/invoice.component.html
+++ b/src/app/booking/invoice/invoice.component.html
@@ -76,6 +76,8 @@
                       <br/>
                       <b>Citizenship:</b> {{ booking.client.citizenship }}
                       <br/>
+                      <b>Room:</b> {{ booking.room.roomNumber }}
+                      <br/>
                       <b>Arrival Date:</b> {{ booking.arrivalDate | date: 'dd.MM.yyyy' }}
                       <br/>
                       <b>Departure Date:</b> {{ booking.departureDate | date: 'dd.MM.yyyy' }}
